--- a/Model.ipynb
+++ b/Model.ipynb
@@ -152,6 +152,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 13)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -3084,11 +3104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
     "### a Logistic Regression Model with the accuracy score of 95% on test set and 91% on cross validation of test set was created to accurately predict whether a customer will churn or not"
-=======
-    "### a Logistic Regression Model with the accuracy score of 95.2% was created to accurately predict whether a customer will churn or not"
->>>>>>> c9af219b35d5aed80e54ea178e2eeeb7a5c99122
    ]
   }
  ],
